# tee-base

./: .gitignore  Makefile  README.md  proj.mk
.github/workflows/: build.yml  ci.yml
crates/: Cargo.toml
crates/zondee/: Cargo.toml  README.md
crates/zondee-macros/: Cargo.toml  README.md
crates/zondee-macros/src/: framework.rs  lib.rs  wrapper.rs
crates/zondee-macros/src/wrapper/: utee_params.rs  utee_workflow.rs
crates/zondee-teec/: Cargo.toml  README.md  build.rs  teec.h  teec.rs
crates/zondee-teec/src/: error.rs  framework.rs  lib.rs  wrapper.rs
crates/zondee-teec/src/wrapper/: connection.rs  operation.rs  param.rs  raw.rs  teec.rs  uuid.rs
crates/zondee-utee/: Cargo.toml  README.md  build.rs  utee.h
crates/zondee-utee/src/: framework.rs  lib.rs  wrapper.rs
crates/zondee-utee/src/wrapper/: alloc.rs  error.rs  params.rs  rand.rs  raw.rs  storage.rs  trace.rs  user_ta_header.rs  utee.rs  uuid.rs
crates/zondee-utee/src/wrapper/storage/: objid.rs
crates/zondee/src/: error.rs  lib.rs  utils.rs  uuid.rs
host/: Makefile
host/src/: Makefile
scripts/: run_ci_tests.sh
ta/: Makefile
ta/src/: Makefile  newuuid.py  rustee_ta.c  sign_encrypt.py  sub.mk  user_ta_header_defines.h
tee-template/REE/lib/: Cargo.toml
tee-template/TEE/lib/: Cargo.toml
